--- a/package.json
+++ b/package.json
@@ -3,15 +3,20 @@
   "type": "module",
   "version": "0.0.1",
   "scripts": {
-    "dev": "astro dev",
+    "dev": "astro dev --host",
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
     "@astrojs/check": "^0.9.4",
+    "@astrojs/svelte": "^6.0.2",
+    "astro": "^4.16.13",
+    "svelte": "^5.2.7",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "sass": "^1.81.0"
   }
 }
