--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/svelte": "^6.0.2",
     "astro": "^4.16.13",
+    "sharp": "^0.33.5",
     "svelte": "^5.2.7",
     "typescript": "^5.7.2"
   },
