--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
+    "@astrojs/sitemap": "^3.2.1",
     "@astrojs/svelte": "^6.0.2",
     "astro": "^4.16.13",
     "sharp": "^0.33.5",
