--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@images/": ["src/assets/images/*"],
       "@layouts/": ["src/layouts/*"],
       "@styles/": ["src/assets/styles/*"],
-      "@data": ["src/lib/data"],
+      "@lib/": ["src/lib/*"],
+      "@data/": ["src/lib/data/*"],
       "@utils/": ["src/lib/utils/*"],
       "@types/": ["src/lib/types/*"],
     },
