Updated name alias issues in tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,13 +4,13 @@
     "baseUrl": ".",
     "paths": {
       "@components/*": ["src/components/*"],
-      "@images/": ["src/assets/images/*"],
-      "@layouts/": ["src/layouts/*"],
-      "@styles/": ["src/assets/styles/*"],
-      "@lib/": ["src/lib/*"],
-      "@data/": ["src/lib/data/*"],
-      "@utils/": ["src/lib/utils/*"],
-      "@types/": ["src/lib/types/*"],
+      "@images/*": ["src/assets/images/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@styles/*": ["src/assets/styles/*"],
+      "@lib/*": ["src/lib/*"],
+      "@data/*": ["src/lib/data/*"],
+      "@utils/*": ["src/lib/utils/*"],
+      "@types/*": ["src/lib/types/*"],
     },
   },
 }
