Added users admin page to show registered users

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@data/*": ["src/lib/data/*"],
       "@utils/*": ["src/lib/utils/*"],
       "@types/*": ["src/lib/types/*"],
+      "@app/constants": ["src/constants.ts"],
     },
   },
 }
